Updated README.md and slight CSS change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="gameLayout">
             <p class="scoreLayout">
-                <span>Score: </span> <span id="scoreEl"></span>
+                <span>Space Invaders - Score: </span> <span id="scoreEl"></span>
             </p>
 
             <canvas></canvas>
